# lvgl_pc_Simulator

./: .gitignore  CMakeLists.txt  README.md  lv_conf.h  main.c
lib/lv_drivers/: CMakeLists.txt  lv_drv_conf.h
lib/lvgl/: lv_conf.h
lvgl-9.3.0/env_support/cmake/: os_desktop.cmake
ui/: ui.c
